--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -18,4 +18,4 @@ resetPasswordUrl=https://minecraft.net/resetpassword
 
 newsUrl=https://www.lfgame.rs/minecraft
 packageListUrl=https://www.lfgame.rs/minecraft/package.json
-selfUpdateUrl=https://modpacks.arunesh.me/latest.json
+selfUpdateUrl=https://www.lfgame.rs/minecraft/latest.json
